JIRA bug fixes (Label, alignment and design changes)

--- a/src/app/modules/auctionModerator/am-detail-page/am-detail-page.component.scss
+++ b/src/app/modules/auctionModerator/am-detail-page/am-detail-page.component.scss
@@ -159,3 +159,8 @@
         .mx-n2 {
             margin-left: 0rem!important;
         }
+        
+        .mr-n2,
+        .mx-n2 {
+            margin-right: 0rem!important;
+        }
